--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -907,6 +907,7 @@
     "Personal_interests": "Personal interests"
   },
   "social": {
+    "social_network_url": "Social Network URL",
     "facebook": "Facebook",
     "twitter": "Twitter",
     "whatsapp": "Whatsapp",
