User Page redirection and label changes added

--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -690,7 +690,7 @@
     "community": "Community",
     "serverError": "Something went wrong. Please Try Again",
     "Subscribe": "Subscribe",
-    "Subscribed": "Subscribed",
+    "Subscribed": "Unsubscribe",
     "Pending": "Pending"
   },
   "left_sidebar": {
