--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -750,7 +750,7 @@
     "community": "Community",
     "serverError": "Something went wrong. Please Try Again",
     "Subscribe": "Subscribe",
-    "Subscribed": "Subscribed",
+    "Subscribed": "Unsubscribe",
     "Pending": "Pending"
   },
 
