--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -680,6 +680,8 @@
   },
   "top_bar_info_modal": {
     "modal_title": "Subscribers / Subscribed / Likes",
+    "subscriber_modal_title": "Subscribe Users",
+    "subscribed_modal_title": "Subscribed Users",
     "follow_btn": "Follow",
     "subscribe_btn": "Subscribed",
     "request_sent_btn": "Request Sent",
@@ -690,7 +692,7 @@
     "community": "Community",
     "serverError": "Something went wrong. Please Try Again",
     "Subscribe": "Subscribe",
-    "Subscribed": "Unsubscribe",
+    "Subscribed": "Subscribed",
     "Pending": "Pending"
   },
   "left_sidebar": {
